datasets/dataset_txt/pipenv/pipenv_1459.txt
damouse commented on 8 Mar 2018 •
edited
pipenv install
throws an error. I also see this doing a variety of other tasks, including pipenv lock. This occurs in multiple projects. I can get rid of the problem by reverting from 11.1.3 to 9.0.1.
I get the same error as #1553, but the error occurs all the time, and I'm not in a virtualenv.
Describe your environment
OS Type MacOS 10.13.1
Python version: $ python -V 3.6.2
Pipenv version: $ pipenv --version pipenv, version 11.1.3
Expected result
Not expecting a traceback.
Actual result
~/code/python/scratch/protobufs $ pipenv install
Pipfile.lock not found, creating…
Locking [dev-packages] dependencies…
kages/pipenv/patched/pip/index.py", line 31, in <module>
    from pip.wheel import Wheel, wheel_ext
  File "/usr/local/lib/python3.6/site-packages/pipenv/patched/pip/wheel.py", line 6, in <module>
    import compileall
  File "/usr/local/Cellar/python3/3.6.2/Frameworks/Python.framework/Versions/3.6/lib/python3.6/compileall.py", line 20, in <module>
    from concurrent.futures import ProcessPoolExecutor
  File "/usr/local/lib/python3.6/site-packages/pipenv/../concurrent/futures/__init__.py", line 8, in <module>
    from concurrent.futures._base import (FIRST_COMPLETED,
  File "/usr/local/lib/python3.6/site-packages/pipenv/../concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax
Steps to replicate
Pipfile:
[[source]]

url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[packages]

protobuf = "*"

[dev-packages]

[requires]

python_version = "3.6"
Commands:
pipenv install
3